# Graphics

./: .gitignore  Cargo.toml  README.md  makefile
data/: requirements.txt
data/mdl/: w03_dragon.mdl  w03_triangle.mdl  w04_cat.mdl  w04_girl.mdl  w04_script.mdl  w05_face.mdl  w06_face.mdl  w06_spheres.mdl  w10_excalibur.mdl  w10_face.mdl  w10_test.mdl  w10_trophy.mdl  w11_trophy.mdl  w11_wave.mdl  w12_knobs_test.mdl  w12_terrain.mdl
data/w03/: w03_dragon  w03_triangle
data/w04/: w04_script
data/w05/: w05_script  w05_solar
data/w06/: w06_gojo.csv
data/w07/: w07_robot  w07_umbrella
data/w08/: w08_script
data/w09/: w09_face  w09_robot  w09_shapes
data/w10/: w10_W.mdl  w10_test.mdl
data/w11/: w11_simple_300.mdl  w11_simple_50.mdl  w11_spiral.mdl
data/w12/: w12_knobs_test.mdl  w12_lighting_test.mdl  w12_savecs_test.mdl
src/: image.rs  main.rs  pattern.rs
src/algorithm/: curve.rs  extra.py  extra.rs  light.rs  line.rs  linear.rs  matrix.rs  mod.rs  shading.rs  shape.rs  topo.py  topo.rs  transform.rs
src/compiler/: MDL.spec  mdl.py  mod.rs  script.py
src/data/: w02_rainbow_lotus.csv
src/format/: constant.rs  convert.rs  file.rs  image.rs  matrix.rs  mod.rs  parse.rs  pixel.rs  util.rs
src/patterns/: cses.rs
src/prev/: mod.rs
src/script/: compile.rs  curve.rs  light.rs  mod.rs  parse.rs  shape.rs  transform.rs  util.rs
src/structs/: image.rs  mod.rs  pixel.rs
src/template/: cses.rs  mod.rs  tests.rs  work00.rs  work01.rs  work02.rs  work03.rs  work04.rs  work05.rs  work06.rs  work07.rs  work08.rs  work09.rs  work10.rs  work11.rs  (+1 more)
(+183 files in other folders)
